adding the heading structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <header>
-        <h1>Salah The Egyptian King</h1>
+        <h1 #logo>Salah The Egyptian King</h1>
+        <ul #menu>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Sign up</a></li>
+        </ul>
 
     </header>
     <section>Biography</section>
