style the header

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <h1 #logo>Salah The Egyptian King</h1>
-        <ul #menu>
+        <h1 id="logo">Salah The Egyptian King</h1>
+        <ul id="menu">
             <li><a href="#">Home</a></li>
             <li><a href="#">Gallery</a></li>
             <li><a href="#">Sign up</a></li>
