styling salah section

--- a/index.html
+++ b/index.html
@@ -17,8 +17,16 @@
         </ul>
 
     </header>
-    <section>Biography</section>
-    <section>Best achievement</section>
+    <section>
+        <div id="salah"></div>
+        <div id="comment">
+            <h2> The King</h2>
+            <p>Mohamed Salah</p>
+        </div>
+    </section>
+    <section>
+        Best achievement
+    </section>
     <section>Top Stories</section>
     <footer> How to contact us?</footer>
 </body>
