structure & styling the achievment section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <title>Salah Egyptian King</title>
 </head>
+
 <body>
     <header>
         <h1 id="logo">Salah The Egyptian King</h1>
@@ -24,10 +26,31 @@
             <p>Mohamed Salah</p>
         </div>
     </section>
-    <section>
-        Best achievement
+    <section id="best">
+        <h1 id="ach">Best achievement</h1>
+        <ul id="line">
+            <li>
+                <div id="first-achi"></div>
+            </li>
+            <li>
+                <div id="first-achi"></div>
+            </li>
+            <li>
+                <div id="first-achi"></div>
+            </li>
+            <li>
+                <div id="first-achi"></div>
+            </li>
+            <li>
+                <div id="first-achi"></div>
+            </li>
+            <li>
+                <div id="first-achi"></div>
+            </li>
+        </ul>
     </section>
     <section>Top Stories</section>
     <footer> How to contact us?</footer>
 </body>
+
 </html>
