structure & styling the top stories section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,42 @@
             </li>
         </ul>
     </section>
-    <section>Top Stories</section>
+    <section id="top">
+        <h1>Top Stories</h1>
+        
+        <div id="right-about">
+            <div class="left-about-heading">
+                <h2>helping people</h2>
+                <hr>
+                <p> Salah is a very generous man, he likes to help people as much as he can</p>
+            </div>
+            <div class="left-about-heading">
+                <h2>National Hero</h2>
+                <hr>
+                <p> Salah become a national hero not only in Egypt but also in the whole arab countries</p>
+            </div>
+        </div>
+        <div id="left-about">
+            <div class="right-about-heading">
+                <h2>Leader</h2>
+                <hr>
+                <p> Salah becomes a leader not only for the natinal team but also for many of young generation giving
+                    them
+                    the hope to be champion one day</p>
+            </div>
+            <div class="right-about-heading">
+                <h2>Story to follow</h2>
+                <hr>
+                <p> What Salah achieved is a story to be told to every small kid, how he was able to reach his goals and
+                    never stop dreamin of what he can achieve</p>
+            </div>
+        </div>
+        <div id="center-about">
+            <div>
+
+            </div>
+        </div>
+    </section>
     <footer> How to contact us?</footer>
 </body>
 
