--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
     <section id="top">
         <h1>Top Stories</h1>
-        
+
         <div id="right-about">
             <div class="left-about-heading">
                 <h2>helping people</h2>
@@ -80,8 +80,10 @@
             </div>
         </div>
         <div id="center-about">
-            <div>
+            <div id="circle-container">
+                <div id="circle-cover">
 
+                </div>
             </div>
         </div>
     </section>
