styling & structure the footer

--- a/index.html
+++ b/index.html
@@ -87,7 +87,24 @@
             </div>
         </div>
     </section>
-    <footer> How to contact us?</footer>
+    <footer id="foot"> 
+        <ul>
+            <li>
+                <a href="http://Facebook.com" target="_blank" aria-label="our page on Fcaebook"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="http://twitter.com" target="_blank" aria-label="our page on twitter"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="http://youtube.com" target="_blank" aria-label="our page on youtube"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li>
+                <a href="http://instagram.com" target="_blank" aria-label="our page on instagram"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
+    <!-- font awesome script -->
+    <script src="https://kit.fontawesome.com/1096aef169.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
